Fixed so the menus work on windows.....